region ld output format finalized

--- a/rest/playground/templates/home.html
+++ b/rest/playground/templates/home.html
@@ -113,6 +113,14 @@ LD Server Playground
                                 <input type="text" class="form-control" id="input-limit" placeholder="1 - {{ data.max_limit }} (default {{ data.max_limit }})" oninput="setHttpRequest()" disabled>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="input-precision">Rounding precision</label>
+                                </div>
+                                <input type="text" class="form-control" id="input-precision" placeholder="0" oninput="setHttpRequest()" disabled>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -199,6 +207,9 @@ LD Server Playground
                 if (limit.length > 0) {
                     httpRequest += '&limit=' + limit;
                 }
+                if ($("#input-precision")[0].value != 0) {
+                    httpRequest += '&precision=' + $("#input-precision")[0].value;
+                }
             } else if (queryType == 6) {
                 httpRequest += "/" + reference.text() + "/populations/" + population.text() + "/variants";
                 var correlation = $("#select-correlation option:selected");
@@ -207,6 +218,9 @@ LD Server Playground
                 var limit = $("#input-limit")[0].value;
                 if (limit.length > 0) {
                     httpRequest += '&limit=' + limit;
+                }
+                if ($("#input-precision")[0].value != 0) {
+                    httpRequest += '&precision=' + $("#input-precision")[0].value;
                 }
             }
             $("#input-http-request")[0].value = httpRequest;
@@ -341,6 +355,8 @@ LD Server Playground
         $("#input-stop").prop("disabled", true);
         $("#input-limit").val("");
         $("#input-limit").prop("disabled", true);
+        $("#input-precision").val("");
+        $("#input-precision").prop("disabled", true);
     }
 
     function changeQueryType() {
@@ -379,6 +395,7 @@ LD Server Playground
                 $("#input-start").prop("disabled", false);
                 $("#input-stop").prop("disabled", false);
                 $("#input-limit").prop("disabled", false);
+                $("#input-precision").prop("disabled", false);
                 break;
             case 6:
                 getGenomeBuilds(true);
@@ -395,6 +412,7 @@ LD Server Playground
                 $("#input-start").prop("disabled", false);
                 $("#input-stop").prop("disabled", false);
                 $("#input-limit").prop("disabled", false);
+                $("#input-precision").prop("disabled", false);
                 break;
         }
         setHttpRequest();
