Increase visible lines of JSON in playground

--- a/rest/playground/templates/home.html
+++ b/rest/playground/templates/home.html
@@ -163,6 +163,7 @@ LD Server Playground
     var editor = ace.edit("json-response", {
         readOnly: true,
         mode: "ace/mode/javascript",
+        maxLines: 100
     });
 
     var restAPI = "{{ data.api_base_url }}";
